--- a/src/component/AuthModal/AuthModal.module.scss
+++ b/src/component/AuthModal/AuthModal.module.scss
@@ -98,6 +98,16 @@
     text-align: center;
 }
 
+.successMessage {
+    background-color: var(--success, #10b981);
+    color: var(--text-white);
+    padding: 0.75rem;
+    border-radius: 0.375rem;
+    font-size: 0.875rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
 .form {
     margin-bottom: 1.5rem;
 }
